<?xml version="1.0"?>
<package format="3">
  <name>pcd</name>
  <version>0.0.1</version>
  <description>The pcd package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>  